--- a/pyproject.toml
+++ b/pyproject.toml
@@ -16,6 +16,7 @@ dependencies = [
   "python-crfsuite>=0.9.9",
   "pysbd>=0.3.4",
   "wtpsplit>=0.2.0",
+  "pyyaml>=6.0",
   "nltk>=3.8.1",
   "tqdm"
 ]
